Fix Header flicker ekements

--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -1,4 +1,5 @@
-.root {
+.header {
+	min-height: 71px;
 	background-color: #fff;
 	padding: 10px 0;
 	border-bottom: 1px solid #e0e0e0;
@@ -9,6 +10,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	min-height: 50px;
 }
 
 .logo {
